Stops datepicker popup hiding behind bootstrap popups on chrome on windows!

--- a/app/assets/stylesheets/cloud.css.less
+++ b/app/assets/stylesheets/cloud.css.less
@@ -241,3 +241,7 @@ table.table td, table.table th {
     border-bottom: none;
   }
 }
+
+.datepicker {
+  z-index: 1000
+}
